@@ -5,11 +5,10 @@ import ru.job4j.tracker.*;
 
 import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.StringJoiner;
+import java.util.*;
+
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
 
 public class StartUITest {
 
@@ -19,7 +18,7 @@ public class StartUITest {
                 new String[] {"0"}
         );
         StubAction action = new StubAction();
-        new StartUI().init(input, new Tracker(), new ArrayList<>(Arrays.asList(action)));
+        new StartUI().init(input, new Tracker(), new ArrayList<>(List.of(action)));
         assertThat(action.isCall(), is(true));
     }
     @Test
@@ -36,7 +35,7 @@ public class StartUITest {
                 .add("Menu.")
                 .add("0. Stub action")
                 .toString();
-        assertThat(new String(out.toByteArray()), is(expect));
+        assertThat(out.toString(), is(expect));
         System.setOut(def);
     }
 }
